--- a/_posts/2020-05-03-airpods.md
+++ b/_posts/2020-05-03-airpods.md
@@ -78,7 +78,7 @@ Changing AirPods de Jean Michel succeeded
 
 Now if you open the PulseAudio sound control panel `pavucontrol` you should see your AirPods in the "Output devices" tab below your default internal audio device.
 
-![](images/airpods01.png)
+![](/assets/airpods01.png)
 
 If the Airpods don't show in the control panel, the issue might be that you haven't installed the `pulseaudio-bluetooth` module.
 
